--- a/angular/src/app/admin/editions/editions.component.html
+++ b/angular/src/app/admin/editions/editions.component.html
@@ -108,7 +108,7 @@
                                             </span>
                                             <span
                                                 *ngIf="!record.dailyPrice && !record.weeklyPrice && !record.monthlyPrice && !record.annualPrice">
-                                                {{"Free" | localize}}
+                                                Custom 
                                             </span>
                                         </td>
                                         <td>
