--- a/angular/src/account/register/register.component.html
+++ b/angular/src/account/register/register.component.html
@@ -691,3 +691,109 @@
     </div>
     </div>
 </div>
+<div class="px-5 py-5">
+    <div class="kt-container kt-grid__item kt-grid__item--fluid">
+        <div class="kt-portlet">
+                    <div class="kt-portlet__head">
+                        <div class="kt-portlet__head-label">
+                            <h3 class="kt-portlet__head-title">
+                                 <span>Customized Plan</span>
+                            </h3>
+                        </div>
+                        <div class="kt-portlet__head-toolbar">
+                            <a href="javascript: void(0);" >
+                                <i class="la la-arrow-left"></i>
+                                {{"Back" | localize}}
+                            </a>
+                        </div>
+                    </div>
+            
+            
+            <div class="row px-4 py-4">
+                <div class="col-lg-6 px-5">
+                            <h5 class="kt-portlet__head-title">
+                                 <span>Contact Us</span>
+                            </h5>
+                            <span>Lorem Ipsum is simply dummy text of the print.</span>
+                    <div class="row py-4">
+                        <div class="col-xl-6">
+                            <div class="form-group">
+                                <label>First Name</label>
+                                <input  type="text" class="form-control" name="firstName" placeholder="Enter Name" value="" autocomplete="off" required maxlength="64">
+                        
+                            </div>
+                        </div>
+                        <div class="col-xl-6">
+                            <div class="form-group">
+                                <label>Email</label>
+                                <input  type="text" class="form-control" name="emailAddress" placeholder="Enter Email" value="" autocomplete="off" required maxlength="64">
+                        
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xl-6">
+                            <div class="form-group">
+                                <label>Company Name</label>
+                                <input  type="text" class="form-control" name="companyName" placeholder="Enter Company Name" value="" autocomplete="off" required maxlength="64">
+                        
+                            </div>
+                        </div>
+                        <div class="col-xl-6">
+                            <div class="form-group">
+                                <label>No. of Users</label>
+                                <input  type="text" class="form-control" name="noOfUsers" placeholder="Enter No Of Users" value="" autocomplete="off" required maxlength="64">
+                        
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="description">{{"Description" | localize}}</label>
+                            <textarea class="form-control"   id="description" name="description" placeholder="Enter Description"></textarea>
+                    </div>
+                </div>
+                <div class="col-lg-6 pt-4">
+                    <div class="row py-3 px-4">
+                        <div class="col-md-8">
+                            <div class="item-card-box shadow "style="height: 70px;">
+                                <div class="item-card rounded ">
+                                    <img src="../../../../assets/img/placeholder.svg" class="py-3 px-3" alt="bill" style="float: left;">
+                                    <span class="py-5 pt-3"><b>Location :</b> 15,A Johar Town , Lahore Punjab</span>
+                                </div>
+                            
+                            </div>
+                        </div>
+                    </div>   
+                    <div class="row py-3 px-4">
+                        <div class="col-md-8">
+                            <div class="item-card-box shadow "style="height: 70px;">
+                                <div class="item-card rounded">
+                                    <img src="../../../../assets/img/message.svg" class="py-3 px-3" alt="bill" style="float: left;">
+                                    <span class="py-5 pt-3"><b>Email :</b> moeen@gmail.com</span>
+                                </div>
+                            
+                            </div>
+                        </div>
+                    </div>   
+                    <div class="row py-3 px-4">
+                        <div class="col-md-8">
+                            <div class="item-card-box shadow "style="height: 70px;">
+                                <div class="item-card rounded">
+                                    <img src="../../../../assets/img/phone-call.svg" class="py-3 px-3" alt="bill" style="float: left;">
+                                    <span class="py-5 pt-3"><b>Phoene :</b> +92 345 0987654</span>
+                                </div>
+                            
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="form-group margin-top-5 px-5">
+                    <button class="btn btn-brand" type="submit">
+                        <span>Send</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
