--- a/angular/src/app/admin/tenants/customized-plan-request.component.html
+++ b/angular/src/app/admin/tenants/customized-plan-request.component.html
@@ -16,14 +16,14 @@
                         <div class="col-xl-6">
                             <div class="form-group">
                                 <label>First Name</label>
-                                <input  type="text" class="form-control" name="firstName" placeholder="Enter Name" value="" autocomplete="off" required maxlength="64">
+                                <input [(ngModel)]="contactus.fullName"  type="text" class="form-control" name="firstName" placeholder="Enter Name" value="" autocomplete="off" required maxlength="64">
                         
                             </div>
                         </div>
                         <div class="col-xl-6">
                             <div class="form-group">
                                 <label>Email</label>
-                                <input  type="text" class="form-control" name="emailAddress" placeholder="Enter Email" value="" autocomplete="off" required maxlength="64">
+                                <input [(ngModel)]="contactus.email"  type="text" class="form-control" name="emailAddress" placeholder="Enter Email" value="" autocomplete="off" required maxlength="64">
                         
                             </div>
                         </div>
@@ -32,14 +32,14 @@
                         <div class="col-xl-6">
                             <div class="form-group">
                                 <label>Company Name</label>
-                                <input  type="text" class="form-control" name="companyName" placeholder="Enter Company Name" value="" autocomplete="off" required maxlength="64">
+                                <input [(ngModel)]="contactus.companyName"  type="text" class="form-control" name="companyName" placeholder="Enter Company Name" value="" autocomplete="off" required maxlength="64">
                         
                             </div>
                         </div>
                         <div class="col-xl-6">
                             <div class="form-group">
                                 <label>No. of Users</label>
-                                <input  type="text" class="form-control" name="noOfUsers" placeholder="Enter No Of Users" value="" autocomplete="off" required maxlength="64">
+                                <input [(ngModel)]="contactus.numberOfUsers" type="text" class="form-control" name="noOfUsers" placeholder="Enter No Of Users" value="" autocomplete="off" required maxlength="64">
                         
                             </div>
                         </div>
@@ -57,14 +57,14 @@
                         <div class="col-xl-6">
                             <div class="form-group">
                                 <label>Price</label>
-                                <input  type="text" class="form-control" name="price" placeholder="Enter Price" value="" autocomplete="off" required maxlength="64">
+                                <input [(ngModel)]="contactus.pricing"  type="text" class="form-control" name="price" placeholder="Enter Price" value="" autocomplete="off" required maxlength="64">
                         
                             </div>
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="description">{{"Description" | localize}}</label>
-                            <textarea class="form-control"   id="description" name="description" placeholder="Enter Description" style="height: 100px;"></textarea>
+                            <textarea [(ngModel)]="contactusdescription" class="form-control"   id="description" name="description" placeholder="Enter Description" style="height: 100px;"></textarea>
                     </div>
                 </div>
                 <div class="col-lg-6 pt-4">
