Sign Up UI Updates

--- a/angular/src/account/register/register.component.html
+++ b/angular/src/account/register/register.component.html
@@ -101,7 +101,7 @@
                                         <div class="col-xl-6">
                                             <div class="form-group">
                                                 <label>Confirm Password</label>
-                                                <input  type="password" class="form-control" name="passwordOfUser" placeholder="Enter Confirm Password" value="">
+                                                <input  type="password" class="form-control" [(ngModel)]="repeatPassword" name="passwordOfUser" placeholder="Enter Confirm Password" value="">
                                                 
                                             </div>
                                         </div>
