UI completed for SignUp and Customized Plan

--- a/angular/src/account/register/register-tenant-result.component.html
+++ b/angular/src/account/register/register-tenant-result.component.html
@@ -1,5 +1,16 @@
-<div class="kt-login__form" [@routerTransition]>
-    <h4>Thanks for Requesting</h4>
-    <p>Our agent will conect you seen after</p>
 
+<div class=""style="padding:10% 30%">
+    <div class="kt-container kt-grid__item kt-grid__item--fluid py-5">
+        <div class="kt-portlet py-5">
+            <div class="d-flex justify-content-center"> 
+                <h2>Thanks for Requesting</h2>
+            </div>
+            <div class="d-flex justify-content-center">
+                <img src="./assets/media/ClosingCheckList/success.png" alt="block-btn">                  
+            </div>
+            <div class="d-flex justify-content-center"> 
+                <h5>Our agent will contact you soon</h5>
+            </div>
+        </div>
     </div>
+</div>
