--- a/angular/src/account/register/register.component.html
+++ b/angular/src/account/register/register.component.html
@@ -754,7 +754,7 @@
                             <button class="btn btn-secondary btn-md btn-tall btn-wide kt-font-bold kt-font-transform-u previebtn" (click)="movetab(-1)" data-ktwizard-type="action-prev">
                                 Previous
                             </button>
-                            <button class="btn btn-success btn-md btn-tall btn-wide kt-font-bold kt-font-transform-u submit" (click)="save()" data-ktwizard-type="action-submit">
+                            <button class="btn btn-success btn-md btn-tall btn-wide kt-font-bold kt-font-transform-u submit" (click)="save()" [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')" data-ktwizard-type="action-submit">
                                 Submit
                             </button>
                             <button class="btn btn-brand btn-md btn-tall btn-wide kt-font-bold kt-font-transform-u nxtbtn" (click)="movetab(1)" data-ktwizard-type="action-next">
@@ -770,5 +770,6 @@
     </div>
     </div>
 </div>
+
 
 
