--- a/angular/src/app/admin/tenants/customized-plan-request.component.html
+++ b/angular/src/app/admin/tenants/customized-plan-request.component.html
@@ -48,7 +48,7 @@
                         <div class="col-xl-6">
                             <div class="form-group">
                                 <label>Commitment</label>
-                                <select name="Commitment" class="form-control bg-white border">
+                                <select name="Commitment" [(ngModel)]="commitment" class="form-control bg-white border">
                                     <option value="0">Monthly Plan</option>
                                     <option value="1">Annullly Plan</option>
                                 </select>
@@ -64,7 +64,7 @@
                     </div>
                     <div class="form-group">
                         <label for="description">{{"Description" | localize}}</label>
-                            <textarea [(ngModel)]="contactusdescription" class="form-control"   id="description" name="description" placeholder="Enter Description" style="height: 100px;"></textarea>
+                            <textarea [(ngModel)]="contactus.description" class="form-control"   id="description" name="description" placeholder="Enter Description" style="height: 100px;"></textarea>
                     </div>
                 </div>
                 <div class="col-lg-6 pt-4">
@@ -74,7 +74,7 @@
                                 <div class="item-card rounded ">
                                     <img src="../../../../assets/img/money.svg" class="pt-3 pl-3" alt="bill">
                                     <p class="pt-2 pl-3"><span class="py-5 pt-3"><b>Monthly Plan:</b> </span><br/>
-                                    <span>$1234</span>
+                                    <span>${{contactus.pricing}}</span>
                                     </p>
                                 </div>
                             </div>
@@ -83,8 +83,8 @@
                 </div>
                 <hr>
                 <div class="form-group margin-top-5 px-5">
-                    <button class="btn btn-brand" type="submit">
-                        <span>Send</span>
+                    <button class="btn btn-brand" type="submit" [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')">
+                        <span>Send Email</span>
                     </button>
                 </div>
             </div>
