Added icon for subscription plans

--- a/angular/src/account/register/register.component.html
+++ b/angular/src/account/register/register.component.html
@@ -203,7 +203,8 @@
                                                             <div class="kt-pricing-1__hexagon1"></div>
                                                             <div class="kt-pricing-1__hexagon2"></div>
                                                             <span class="kt-pricing-1__icon kt-font-brand">
-                                                                <i class="fa {{editionIcons[i]}}"></i>
+                                                                
+                                                         <img src="{{editionIcons[i]}}" alt="block-btn">
                                                             </span>
                                                         </div>
                         
