--- a/angular/src/app/main/checklist/createtask/createtask.component.html
+++ b/angular/src/app/main/checklist/createtask/createtask.component.html
@@ -133,7 +133,7 @@
                                     <div class="form-group">
                                         <label>{{"Frequency" | localize}}</label>
                                         <select class="bg-white border form-control input-medium" required id="frequency" name="frequency"
-                                            (change)="onChange($event.target.value)" [(ngModel)]="checklist.frequency">
+                                            [(ngModel)]="checklist.frequency">
                                             <option [ngValue]="undefined" hidden>{{"Criteria" | localize}}</option>
                                             <option value="5">{{"None" | localize}}</option>
                                             <option value="1">{{"Monthly" | localize}}</option>
@@ -188,26 +188,6 @@
                                             <option [value]=2>{{"DaysBefore" | localize}}</option>
                                             <option [value]=3>{{"DaysAfter" | localize}}</option>
                                         </select>
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    <div class="form-group">
-                                        <label>{{"Endson" | localize}}</label>
-                                        <form class="input-arrow">
-                                            <input [disabled]="checklist.frequency==5" [(ngModel)]="checklist.endsOn" required="required"
-                                                autocomplete="off" class="form-control" name="date" bsDatepicker
-                                                placeholder="Month"
-                                                [bsConfig]="{dateInputFormat: 'MMMM YYYY'}"
-                                                (onShown)="onOpenCalendar($event)">
-                                        </form>
-                                    </div>
-                                    <div class="kt-radio-list eom-radio">
-                                        <span></span>
-                                        <label class="kt-radio kt-radio--brand" name="radio5">
-                                            <input type="radio" [(checked)]="checklist.endOfMonth" name="endOfMonth"
-                                                (click)="handleRadioChange()">{{"Endofmonth" | localize}}
-                                            <span></span>
-                                        </label>
                                     </div>
                                 </div>
                             </div>
